--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^5.1.0",
     "mongoose": "^8.15.0",
     "morgan": "^1.10.0",
-    "node-cache": "^5.1.2"
+    "node-cache": "^5.1.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.2",
